--- a/part3/notesBackend/package.json
+++ b/part3/notesBackend/package.json
@@ -6,8 +6,13 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "\"echo \\\"Error: no test specified\\\" && exit 1\""
+    "test": "\"echo \\\"Error: no test specified\\\" && exit 1\"",
+    "build:ui": "rm -rf build && cd ../../part2/practice/ && npm run build --prod && cp -r build ../../part3/notesBackend/",
+    "deploy": "git push heroku master",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
+    "logs:prod" : "heroku logs --tail"
   },
+  "proxy" : "https://localhost:3001",
   "author": "Jake Francis",
   "license": "MIT",
   "dependencies": {
