--- a/part3/phonebookBackEnd/package.json
+++ b/part3/phonebookBackEnd/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "build:ui": "rm -rf build && cd ../../part2/phonebook/ && npm run build --prod && cp -r build ../../part3/phonebookBackEnd/"
   },
   "author": "",
   "license": "ISC",
