--- a/part2/phonebook/package.json
+++ b/part2/phonebook/package.json
@@ -19,6 +19,7 @@
     "server": "json-server -p3001 --watch db.json",
     "both" : "json-server -p3001 --watch db.json && react-scripts start"
   },
+  "proxy" : "http://localhost:3001",
   "eslintConfig": {
     "extends": "react-app"
   },
