--- a/part3/phonebookBackEnd/package.json
+++ b/part3/phonebookBackEnd/package.json
@@ -7,7 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "build:ui": "rm -rf build && cd ../../part2/phonebook/ && npm run build --prod && cp -r build ../../part3/phonebookBackEnd/"
+    "build:ui": "rm -rf build && cd ../../part2/phonebook/ && npm run build --prod && cp -r build ../../part3/phonebookBackEnd/",
+    "deploy" : "git push heroku master",
+    "deploy:ui": "npm run build:ui && git add . && git commit -m ui-build && npm run deploy",
+    "logs:prod": "heroku logs --tail"
   },
   "author": "",
   "license": "ISC",
