--- a/part3/notesBackend/package.json
+++ b/part3/notesBackend/package.json
@@ -10,13 +10,15 @@
     "build:ui": "rm -rf build && cd ../../part2/practice/ && npm run build --prod && cp -r build ../../part3/notesBackend/",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
-    "logs:prod" : "heroku logs --tail"
+    "logs:prod": "heroku logs --tail"
   },
   "author": "Jake Francis",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.10.6",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
