--- a/part3/phonebookBackEnd/package.json
+++ b/part3/phonebookBackEnd/package.json
@@ -8,7 +8,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "build:ui": "rm -rf build && cd ../../part2/phonebook/ && npm run build --prod && cp -r build ../../part3/phonebookBackEnd/",
-    "deploy" : "git push heroku master",
+    "deploy": "git push heroku master",
     "deploy:ui": "npm run build:ui && git add . && git commit -m ui-build && npm run deploy",
     "logs:prod": "heroku logs --tail"
   },
@@ -17,7 +17,9 @@
   "dependencies": {
     "axios": "^0.19.2",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.10.6",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
