--- a/part3/notesBackend/package.json
+++ b/part3/notesBackend/package.json
@@ -10,7 +10,8 @@
     "build:ui": "rm -rf build && cd ../../part2/practice/ && npm run build --prod && cp -r build ../../part3/notesBackend/",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "lint" : "eslint ."
   },
   "author": "Jake Francis",
   "license": "MIT",
@@ -22,6 +23,9 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^7.10.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
     "nodemon": "^2.0.4"
   }
 }
