--- a/part3/phonebookBackEnd/package.json
+++ b/part3/phonebookBackEnd/package.json
@@ -10,7 +10,8 @@
     "build:ui": "rm -rf build && cd ../../part2/phonebook/ && npm run build --prod && cp -r build ../../part3/phonebookBackEnd/",
     "deploy": "git push heroku master",
     "deploy:ui": "npm run build:ui && git add . && git commit -m ui-build && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
@@ -24,6 +25,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^7.10.0",
     "nodemon": "^2.0.4"
   }
 }
