--- a/part4/notesBackend/package.json
+++ b/part4/notesBackend/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "\"echo \\\"Error: no test specified\\\" && exit 1\"",
     "build:ui": "rm -rf build && cd ../../part2/practice/ && npm run build --prod && cp -r build ../../part3/notesBackend/",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
     "logs:prod": "heroku logs --tail",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest --verbose"
   },
   "author": "Jake Francis",
   "license": "MIT",
@@ -27,5 +27,5 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
     "nodemon": "^2.0.4"
-  }
+  },
 }
