--- a/part4/notesBackend/package.json
+++ b/part4/notesBackend/package.json
@@ -26,6 +26,7 @@
     "eslint": "^7.10.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
+    "jest": "^26.4.2",
     "nodemon": "^2.0.4"
   }
 }
