--- a/part4/blog-list/package.json
+++ b/part4/blog-list/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest --verbose",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "mongoose": "^5.10.7"
   },
   "devDependencies": {
+    "eslint": "^7.10.0",
     "jest": "^26.4.2",
     "nodemon": "^2.0.4"
   }
