--- a/part4/blog-list/package.json
+++ b/part4/blog-list/package.json
@@ -7,7 +7,8 @@
     "test": "jest --verbose",
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
   "author": "",
   "license": "ISC",
