--- a/part5/blog-list/package.json
+++ b/part5/blog-list/package.json
@@ -7,6 +7,7 @@
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
     "start": "NODE_ENV=production node index.js",
     "dev": "NODE_ENV=development nodemon index.js",
+    "build:ui": "rm -rf build && cd ../../part5/bloglist-frontend/ && npm run build --prod && cp -r build ../../part5/blog-list/",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
