styling on bloglist

--- a/part5/bloglist-frontend/package.json
+++ b/part5/bloglist-frontend/package.json
@@ -43,6 +43,7 @@
     "@testing-library/react": "^11.2.6",
     "cypress": "^7.2.0",
     "eslint-plugin-cypress": "^2.11.2",
-    "eslint-plugin-jest": "^24.3.6"
+    "eslint-plugin-jest": "^24.3.6",
+    "sass": "^1.34.0"
   }
 }
